k8s/argo-cd/destination-rule.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: argocd
  namespace: argocd
spec:
  host: argocd-server.argocd.svc.cluster.local  # Nome completo do serviço
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
