k8s/argo-cd/vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd
  namespace: argocd
spec:
  hosts:
  - "lab.com.br"
  gateways:
  - istio-system/ingress-gateway 
  http:
  - match:
    - uri:
        prefix: /argo-cd
    route:
    - destination:
        host: argocd-server
        port:
          number: 80
